<?xml version="1.0"?>
<package>
  <name>rb_description</name>
  <version>0.0.0</version>
  <description>The rb_description package</description>

  <maintainer email="jslim@rainbow-robotics.com">JeongsooLim</maintainer>
  <author email="jslim@rainbow-robotics.com">JeongsooLim</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
